# meept

./: .aider.conf.yml  .env.example  .gitignore  .golangci.yml  CLAUDE.md  LICENSE  Makefile  README.md  diagram.md  go.mod  go.sum  llmdoc  mkdocs.yml  pyproject.toml
.claude/: .mind.mv2.Ec0JIM  .mind.mv2.yUJ7IU  mind-session-opencode.json  settings.local.json
.firecrawl/: intentgate.json  oh-my-openagent-repo.md  oh-my-openagent.json  oh-my-pi-edit-raw.md  oh-my-pi-edit.md  oh-my-pi-repo.md  oh-my-pi.json  omo-overview.md
.githooks/: README.md  commit-msg  pre-commit  pre-commit-deferred  pre-commit-errors  pre-commit-feature-docs  pre-commit-gosec  pre-commit-mutexio  pre-commit-setters  pre-commit-u1000  pre-commit-vet
.mcp_data/: embeddings-cache.json  identifier-embeddings-cache.json
.sisyphus/: boulder.json
analysis/: claude-flow-analysis.md  meept-vs-claude-flow.md  pi-agent.md
cli/: __main__.py  app.py
config/: RULES.md  agents.json5  ai-infra.json5  client.json5  constitution.md  epistemic_tags.json5  mcp_servers.json  mcp_servers.json5  meept.json5  meept.toml  menubar.json5  models.json5  presets.json5  pty.json5  purpose.md  q_agent.example.toml  q_agent.json5  restrictions.md  runtime.json5  subject.toml  tester.toml
docs/: .nav.yml  202602-plan-opus46-review.md  20260423-plan-implement-determinism.md  20260606-cluster-a-hashline-editing.md  20260606-cluster-b-lsp-code-intelligence.md  20260606-cluster-c-intent-classification.md  20260606-cluster-d-stream-rules-memory.md  20260606-cluster-e-multi-agent-scaling.md  20260606-cluster-f-debugger-integration.md  20260606-cluster-g-tool-workflow.md  20260606-cluster-h-skill-system-evolution.md  20260618-checkreview.md  WORKLIST.md  alternate-tui.md  audit-bugs-gaps-2026-04-25-LOW-SEVERITY-FIXES.md  audit-bugs-gaps-2026-04-25-final-report.md  (+60 more)
menubar/src-tauri/: Cargo.toml  tauri.conf.json
menubar/src-tauri/icons/: icon.icns
menubar/src-tauri/src/: main.rs
(+3572 files in other folders)
