[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meept"
version = "0.1.0"
description = "Self-executing autonomous bot with hybrid memory and multi-frontend support"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.11",
    "tomli>=2.0; python_version < '3.11'",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
memory = [
    "memu-py>=0.1.0",
    "memvid-sdk>=2.0.0",
]
telegram = [
    "python-telegram-bot>=22.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.8",
]
calendar = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.0",
]
cli = [
    "textual>=1.0",
]
mcp = [
    "mcp>=1.25",
]
all = [
    "meept[memory,telegram,web,calendar,cli,mcp]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
meept-daemon = "meept.__main__:main"
meept = "cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meept", "cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
